--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,6 @@
   "name": "treeUK",
   "version": "0.0.1",
   "dependencies": {
-    "foundation": "~5.5.2"
+    "foundation-sites": "~6.5.3"
   }
 }
